fix dialog size and tabs on mobile

--- a/public/stylesheets/less/rp-article.less
+++ b/public/stylesheets/less/rp-article.less
@@ -1,6 +1,7 @@
 .rp-article-dialog {
     height: 95%;
     max-height: 95% !important;
+    max-width: 95% !important;
     @media (min-width: @layout-xs) {
         max-width: 95% !important;
     }
